--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="password">Password</string>
     <string name="welcome_back">Welcome back,</string>
     <string name="welcome">Welcome,</string>
-    <string name="sign_in_to_continue">Sign in to continue</string>
+    <string name="sign_in_to_continue">Sign In to continue</string>
     <string name="new_user">New user?</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="create_account_to_continue">Create account to continue</string>
@@ -16,4 +16,5 @@
     <string name="have_you_account">Already have an account?</string>
     <string name="navigation_drawer_open" translatable="false">navigation_drawer_open</string>
     <string name="navigation_drawer_close" translatable="false">navigation_drawer_close</string>
+    <string name="sign_up_to_continue">Sign Up to continue</string>
 </resources>
