--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="navigation_drawer_open" translatable="false">navigation_drawer_open</string>
     <string name="navigation_drawer_close" translatable="false">navigation_drawer_close</string>
     <string name="sign_up_to_continue">Sign Up to continue</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_notes">Notes</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_tags">Tags</string>
 </resources>
