Note creator (window) is completly created. All work good.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="title_notes">Notes</string>
     <string name="title_settings">Settings</string>
     <string name="title_tags">Tags</string>
+    <string name="title">title</string>
+    <string name="description">description</string>
+    <string name="create_note">Create Note</string>
+    <string name="create">Create</string>
 </resources>
